change GitHub Actions back to ubuntu

--- a/.github/workflows/webgl-build.yml
+++ b/.github/workflows/webgl-build.yml
@@ -2,7 +2,7 @@ name: Build WebGL Version
 on: [ push ]
 jobs:
   build-game:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     - name: Checkout 📥
       uses: actions/checkout@v2
